--- a/Soporte/SoporteWeb/Web.config
+++ b/Soporte/SoporteWeb/Web.config
@@ -10,9 +10,10 @@
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS;Database=SoporteDB;User Id=sa;Password=0508;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+	
+	<connectionStrings>
+		<add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS;Initial Catalog=SoporteDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
