--- a/Soporte/SoporteWeb/SoporteWeb.csproj
+++ b/Soporte/SoporteWeb/SoporteWeb.csproj
@@ -203,15 +203,57 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\animate.css" />
+    <Content Include="Content\aos.css" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\flaticon.css" />
+    <Content Include="Content\icomoon.css" />
+    <Content Include="Content\ionicons.min.css" />
+    <Content Include="Content\magnific-popup.css" />
+    <Content Include="Content\open-iconic-bootstrap.min.css" />
+    <Content Include="Content\owl.carousel.min.css" />
+    <Content Include="Content\owl.theme.default.min.css" />
+    <Content Include="Content\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Imgs\about-1.jpg" />
+    <Content Include="Imgs\about.jpg" />
+    <Content Include="Imgs\bg_1.jpg" />
+    <Content Include="Imgs\bg_2.jpg" />
+    <Content Include="Imgs\image_1.jpg" />
+    <Content Include="Imgs\image_2.jpg" />
+    <Content Include="Imgs\image_3.jpg" />
+    <Content Include="Imgs\image_4.jpg" />
+    <Content Include="Imgs\image_5.jpg" />
+    <Content Include="Imgs\image_6.jpg" />
+    <Content Include="Imgs\loc.png" />
+    <Content Include="Imgs\person_1.jpg" />
+    <Content Include="Imgs\person_2.jpg" />
+    <Content Include="Imgs\person_3.jpg" />
+    <Content Include="Imgs\person_4.jpg" />
+    <Content Include="Imgs\project-1.jpg" />
+    <Content Include="Imgs\project-2.jpg" />
+    <Content Include="Imgs\project-3.jpg" />
+    <Content Include="Imgs\project-4.jpg" />
+    <Content Include="Imgs\project-5.jpg" />
+    <Content Include="Imgs\project-6.jpg" />
+    <Content Include="Imgs\staff-1.jpg" />
+    <Content Include="Imgs\staff-2.jpg" />
+    <Content Include="Imgs\staff-3.jpg" />
+    <Content Include="Imgs\staff-4.jpg" />
+    <Content Include="Imgs\team-1.jpg" />
+    <Content Include="Imgs\team-2.jpg" />
+    <Content Include="Imgs\team-3.jpg" />
+    <Content Include="Imgs\team-4.jpg" />
+    <Content Include="Imgs\testimony-1.jpg" />
+    <Content Include="Imgs\testimony-2.jpg" />
+    <Content Include="Scripts\aos.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -220,6 +262,7 @@
     <Content Include="Scripts\esm\popper-utils.min.js" />
     <Content Include="Scripts\esm\popper.js" />
     <Content Include="Scripts\esm\popper.min.js" />
+    <Content Include="Scripts\google-map.js" />
     <Content Include="Scripts\index.js.flow" />
     <Content Include="Scripts\esm\popper.min.js.map" />
     <Content Include="Scripts\esm\popper.js.map" />
@@ -236,6 +279,7 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
+    <Content Include="Scripts\jquery-3.2.1.min.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
     <Content Include="Scripts\jquery-3.5.1.slim.js" />
@@ -243,15 +287,25 @@
     <Content Include="Scripts\jquery-3.5.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.5.1.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-migrate-3.0.1.min.js" />
+    <Content Include="Scripts\jquery.animateNumber.min.js" />
+    <Content Include="Scripts\jquery.easing.1.3.js" />
+    <Content Include="Scripts\jquery.magnific-popup.min.js" />
+    <Content Include="Scripts\jquery.min.js" />
+    <Content Include="Scripts\jquery.stellar.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\jquery.waypoints.min.js" />
+    <Content Include="Scripts\main.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\owl.carousel.min.js" />
     <Content Include="Scripts\popper-utils.js" />
     <Content Include="Scripts\popper-utils.min.js" />
     <Content Include="Scripts\popper.js" />
     <Content Include="Scripts\popper.min.js" />
+    <Content Include="Scripts\scrollax.min.js" />
     <Content Include="Scripts\src\index.js" />
     <Content Include="Scripts\src\methods\defaults.js" />
     <Content Include="Scripts\src\methods\destroy.js" />
@@ -376,7 +430,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Imgs\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
