--- a/Soporte/SoporteWeb/Web.config
+++ b/Soporte/SoporteWeb/Web.config
@@ -11,8 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS;Database=SoporteDB;User Id=sa;Password=0508;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS;Initial Catalog=SoporteDB;Integrated Security=True;" providerName="System.Data.SqlClient" />  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
