--- a/Soporte/SoporteWeb/SoporteWeb.csproj
+++ b/Soporte/SoporteWeb/SoporteWeb.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PrincipalController.cs" />
+    <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\TipoesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -196,12 +197,18 @@
     <Compile Include="Migrations\202012030005177_UpdateUser.Designer.cs">
       <DependentUpon>202012030005177_UpdateUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202012160348177_MakeProfile.cs" />
+    <Compile Include="Migrations\202012160348177_MakeProfile.Designer.cs">
+      <DependentUpon>202012160348177_MakeProfile.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Costo.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\ProfileViewModel.cs" />
     <Compile Include="Models\Tipo.cs" />
+    <Compile Include="Models\UserViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -433,6 +440,7 @@
     <Content Include="Views\Principal\Index.cshtml" />
     <Content Include="Views\Roles\Index.cshtml" />
     <Content Include="Views\Roles\AddRoles.cshtml" />
+    <Content Include="Views\Profile\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -464,6 +472,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012030005177_UpdateUser.resx">
       <DependentUpon>202012030005177_UpdateUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012160348177_MakeProfile.resx">
+      <DependentUpon>202012160348177_MakeProfile.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
