update principal View

--- a/Soporte/SoporteWeb/SoporteWeb.csproj
+++ b/Soporte/SoporteWeb/SoporteWeb.csproj
@@ -293,6 +293,7 @@
     <Content Include="Imgs\image_5.jpg" />
     <Content Include="Imgs\image_6.jpg" />
     <Content Include="Imgs\loc.png" />
+    <Content Include="Imgs\login.jpg" />
     <Content Include="Imgs\person_1.jpg" />
     <Content Include="Imgs\person_2.jpg" />
     <Content Include="Imgs\person_3.jpg" />
